testcases/malgo/error/QualifiedImport.mlg
module QualifiedImport = {
  module {..} = import Builtin;
  module P = import Prelude;
  
  main = {
    putStrLn "Hello, world!"
  };
}